# wasmjs

./: .gitignore  README.md  activate  pyproject.toml  tox.ini
examples/: time_evals.py
wasmjs/: __main__.py  jsvalueutil.py  lifecycle.py  test_jsvalueutil.py  test_wasmfile.py  test_wasmjs.py  wasmfile.py  wasmjs.py
wasmjs/api/: js.py  memutil.py  qjs.py  test_js.py  test_memutil.py  wasilibc.py
